--- a/MakingVocabulary.css
+++ b/MakingVocabulary.css
@@ -15,12 +15,12 @@
     justify-content: space-between;
     align-items: center;
     z-index: 10;
-    box-shadow: 5px 5px 20px 0px #D7D4D4;
+    box-shadow: 2px 2px 50px -30px gray;
 }
 .header img {
-    width: 100px;
+    width: 140px;
     float: left;
-    margin-top: 25px;
+    margin-top: 20px;
     margin-left: 50px;
 }
 .nav {
@@ -50,7 +50,8 @@ a {
 
 /* main */
 .main{
-    height: 805px;
+    height: 100%;
+    min-height: 780px;
     width: 100%;
     margin-top: 130px;
 }
@@ -61,6 +62,7 @@ a {
     float: left;
     width: 450px;
     height: 100%;
+    min-height: 780px;
     text-indent: 10px;
     border-right: 1.5px solid lightgray;
 }
