--- a/Vocabulary.css
+++ b/Vocabulary.css
@@ -15,12 +15,12 @@
     justify-content: space-between;
     align-items: center;
     z-index: 10;
-    box-shadow: 5px 5px 20px 0px #D7D4D4;
+    box-shadow: 2px 2px 50px -30px gray;
 }
 .header img {
-    width: 100px;
+    width: 140px;
     float: left;
-    margin-top: 25px;
+    margin-top: 20px;
     margin-left: 50px;
 }
 .nav {
