--- a/Test.css
+++ b/Test.css
@@ -1,42 +1,195 @@
-body{
+body {
+    margin : 0;
+    text-align: center;
+}
+
+section {
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    overflow : hidden;
+    width: 100vw;
+    height: 100vh;
 }
 
-#wrapper{
-    display: inline-grid;
-    grid-template-columns: 3;
-}
-
-#main_container{
+.main_container {   
     display: flex;
-    grid-column: 2/3;
-    justify-content: center;
-    margin-top : 50px;
-    margin-bottom:50px;
+    justify-content: space-between; 
 }
+
+@media (min-width:1024px) {
+    #main {
+        width : 1000px;
+        height : 600px;
+    }
+
+    .page-number {
+        font-size : 30px;
+    }
+
+    .text {
+        font-size: 60px;
+        margin : 90px 0 100px 0;
+    }
+
+    .line {
+            width: 980px;
+    }
+
+    .text-answer{
+        line-height:100px;
+        font-size: 30px;
+    }
+
+    .answer {
+        width: 450px;
+        height: 100px;
+        margin : 0 10px 20px 10px;
+    }
+
+    .answer:hover {
+        line-height: 90px;
+    }
+
+    img {
+        width: 60px;
+        height: 50px;
+    }
+} 
+
+@media (max-width:1024px) and (min-width:767px){
+    #main {
+        width : 800px;
+        height : 600px;
+    }
+
+    .page-number {
+        font-size : 25px;
+    }
+
+    .text {
+        font-size: 50px;
+        margin : 90px 0 100px 0;
+    }
+
+    .line {
+         width : 750px;
+    }
+
+    .text-answer{
+        line-height:100px;
+        font-size: 30px;
+    }
+
+    .answer {
+        width: 340px;
+        height: 100px;
+        margin : 0 10px 20px 10px;
+    }
+
+    .answer:hover {
+        line-height: 90px;
+    }
+
+    img {
+        width: 50px;
+        height: 45px;
+    }
+}
+
+@media (max-width : 767px) and (min-width:480px){
+    #main {
+        width : 500px;
+        height : 350px;
+    }
+
+    .page-number {
+        font-size : 20px;
+    }
+
+    .text {
+        margin : 40px 0 45px 0;
+        font-size: 30px;
+    }
+
+    .text-answer{
+        line-height:50px;
+        font-size: 20px;
+    }
+
+    .answer {
+        width: 210px;
+        height: 50px;
+        margin-bottom: 15px;
+        margin-left:5px;
+        margin-right: 5px;
+    }
+
+    .answer:hover {
+        line-height: 40px;
+    }
+
+    .line {
+        width : 450px;
+    }
+
+    img {
+        width: 45px;
+        height: 40px;
+    }
+} 
+
+@media (max-width:480px) and (min-width:320px) {
+    #main {
+        width:250px;
+        height:300px;
+    }
+
+    .line {
+        width : 230px;
+        margin-bottom : 0;
+    }
+
+    .page-number {
+        font-size : 20px;
+    }
+
+    .text {
+        margin : 30px 0 30px 0;
+        font-size: 30px;
+    }
+
+    .text-answer{
+        line-height:50px;
+        font-size: 20px;
+    }
+
+    .answer {
+        width: 100px;
+        height: 50px;
+        margin-left:5px;
+        margin-right: 5px;
+        margin-bottom: 10px;
+    }
+    
+    .answer:hover {
+        line-height: 40px;
+    }
+
+    img {
+        width: 45px;
+        height: 40px;
+    }
+}  
+
 
 #main {
-    width: 1000px;
-    height: 600px;
-    border-radius: 3rem;
     background-color: #ffeb9a;
+    border-radius: 3rem;
 }
 
 .line {
-    border: 1px solid #8f8f8f;
-    margin: auto;
-    width: 950px;
-}
-
-img {
-    padding: 0 30px 0 30px;
-    width: 50px;
-    height: 45px;
-    cursor:pointer;
+    border-top: 1.5px solid #8f8f8f;
+    margin: auto;   
 }
 
 .btn_wrap { 
@@ -45,40 +198,25 @@ img {
     align-items: center;
 }
 
-.previous {
-    grid-column: 1/2;
-}
-
-.next {
-    grid-column: 3/4;
+img {
+    padding: 0 15px 0 15px;
+    cursor: pointer;
 }
 
 .page-number {
     margin-top : 20px;
-    font-size : 25px;
     font-weight:normal;
     color:#8f8f8f;
 }
 
-.text {
-    margin : 90px 0 110px 0;
-    font-size: 50px;
-    font-weight:500;
-}
-
 .text-answer {
     color:#8f8f8f;
-    line-height:100px;
-    font-size: 30px;
 }
 
 .answer {
     box-sizing: border-box;
     display: inline-flex;
     justify-content: center;
-    margin : 0 10px 20px 10px;
-    width: 430px;
-    height: 100px;
     background-color:#fff7d5;
 }
 
@@ -87,7 +225,6 @@ img {
 }
 
 .answer:hover {
-    line-height: 90px;
     border: 5px solid #fcd121;
     cursor:pointer;
 }
