--- a/index.css
+++ b/index.css
@@ -1,134 +1,495 @@
-header {
-        position: fixed;
-        box-shadow: 2px 2px 50px -30px gray;
-        top: 0;
-        left: 0;
-        right: 0;
-        height: 80px;
-        padding: 1rem;
-        color: white;
-        background: white;
-        font-weight: bold;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+* {
+    box-sizing: border-box;
+    margin: 0 auto;
+    margin-bottom: 0px;
+  }
+  
+  nav {
+    max-width: 1200px;
+  }
+  
+  header {
+    position: fixed;
+    box-shadow: 2px 2px 50px -30px gray;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    padding: 1rem;
+    color: white;
+    background: white;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  #logo {
+    margin: 0 auto;
+    margin-left: 190px;
+    height: 44px;
+    width: 159px;
+    background-image: url("image/logo.png");
+  }
+  
+  ul {
+    margin-right: 100px;
+  }
+  
+  #main {
+    margin: 0px auto;
+    width: 100%;
+  }
+  
+  li {
+    list-style: none;
+    margin: auto;
+    float: right;
+    text-align: center;
+    margin-right: 27px;
+    margin-left: 27px;
+    font-size: 20px;
+  }
+  
+  a:link {
+    color: #2E2E2E;
+    text-decoration: none;
+  }
+  
+  a:visited {
+    color: #2E2E2E;
+    text-decoration: none;
+  }
+  
+  li:hover {
+    color: #000000;
+    text-decoration: none;
+    box-shadow: inset 0 -10px 0  #fcd121; 
+  }
+  
+  li:active {
+    color: #000000;
+    text-decoration: none;
+  }
+  
+  body {
+    -ms-overflow-style: none;
+    padding-top: 83px;
+    margin-top: 133px;
+    margin: 0px;
+    background: #ffffff;
+  }
+  
+  ::-webkit-scrollbar {
+    display: none;
+  }
+  
+  .box {
+    -ms-overflow-style: none;
+  }
+  
+  .box::-webkit-scrollbar {
+    display: none;
+  }
+  
+  h1 {
+    display: inline-block;
+    font-family: 'Nunito', sans-serif;
+    font-size: 300px;
+    color: #0f0071;
+    ;
+    margin-top: 250px;
+    line-height: 230px;
+    letter-spacing: -4px;
+  }
+  
+  h2 {
+    display: inline;
+    font-family: 'Nunito', sans-serif;
+    font-size: 300px;
+    color: #0f0071;
+    ;
+    margin-top: 250px;
+    line-height: 230px;
+    letter-spacing: -4px;
+  }
+  
+  h3 {
+    letter-spacing: -4px;
+    font-size: 45px;
+    color: #0f0071;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    letter-spacing: 2px;
+  }
+  
+  .cssanimation,
+  .cssanimation span {
+    animation-duration: 1s;
+    animation-fill-mode: both;
+  }
+  
+  .cssanimation span {
+    display: inline-block
+  }
+  
+  .leFlyInBottom span {
+    animation-name: leFlyInBottom
+  }
+  
+  @keyframes leFlyInBottom {
+    0% {
+        transform: translate(0px, 80px);
+        opacity: 0
     }
-    #logo {
-        margin: 0 auto;
-        margin-left: 190px;
-        height: 44px;
-        width: 159px;
-        background-image: url("image/logo.png");
+  
+    50% {
+        transform: translate(10px, -50px);
+        animation-timing-function: ease-in-out
     }
-    ul{
-        margin-right: 100px;
+  }
+  
+  p {
+    font-size: 45px;
+    color: #0f0071;
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+  }
+  
+  section {
+    height: 3000px;
+    background: linear-gradient(-173deg, #fff8db, #fff8db 40%, #fcd121 40%, #fcd121);
+  }
+  
+  .container {
+    overflow-x: hidden;
+    position: relative;
+    z-index: 0;
+    display: flex;
+    justify-content: center;
+    min-height: 200vh;
+  }
+  
+  .pulse {
+    z-index: -1;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    float: right;
+    transform: translate(45%, -40%);
+    max-width: 50rem;
+  }
+  
+  .pulse2 {
+    z-index: -1;
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translate(-30%, 70%);
+    max-width: 55rem;
+  }
+  
+  circle {
+    fill: #fcd121;
+    transform: scale(0);
+    opacity: 0;
+    transform-origin: 50% 50%;
+    animation: pulse 3s cubic-bezier(.5, .5, 0, 1);
+    animation-iteration-count: infinite;
+  }
+  
+  circle:nth-child(2) {
+    fill: #0f0071;
+    animation: pulse 3s 0.75s cubic-bezier(.5, .5, 0, 1);
+    animation-iteration-count: infinite;
+  }
+  
+  circle:nth-child(3) {
+    fill: #fff8db;
+    animation: pulse 3s 1.5s cubic-bezier(.5, .5, 0, 1);
+    animation-iteration-count: infinite;
+  }
+  
+  .pulse2 circle {
+    fill: #0f0071;
+    transform: scale(0);
+    opacity: 0;
+    transform-origin: 50% 50%;
+    animation: pulse 3s cubic-bezier(.5, .5, 0, 1);
+    animation-iteration-count: infinite;
+  }
+  
+  .pulse2 circle:nth-child(2) {
+    fill: #fff8db;
+    animation: pulse 3s 0.75s cubic-bezier(.5, .5, 0, 1);
+    animation-iteration-count: infinite;
+  }
+  
+  .pulse2 circle:nth-child(3) {
+    fill: #fcd121;
+    animation: pulse 3s 1.5s cubic-bezier(.5, .5, 0, 1);
+    animation-iteration-count: infinite;
+  }
+  
+  .container2 {
+    background: linear-gradient(-173deg, #fff8db, #fff8db 40%, #fcd121 40%, #fcd121);
+  }
+  
+  @keyframes pulse {
+  
+    25% {
+        opacity: 0.8;
     }
-    .ment{
-        color: #ffffff;
-        float: right;
-        font-size: 130px;
-        margin-right: 290px;
-        margin-top: 110px;
-        text-align: left;
-        line-height: 130px; 
+  
+    100% {
+        transform: scale(1);
     }
-    #main {
-        padding-right : 30px;
-        padding-left: 30px;
-        margin: 0px auto;
-        width: 100%;
-        height: 100%;
-        padding-top: 3rem;
+  
+  }
+  
+  .scroll-down {
+    position: absolute;
+    bottom: 5rem;
+    transform: translateX(-10%);
+    transform: translateY(-1000%);
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .mouse {
+    width: 2.5rem;
+    height: 5rem;
+    border: 2px solid #0f0071;
+    border-radius: 2rem;
+    margin-bottom: .5rem;
+    display: flex;
+  }
+  
+  .mouse span {
+    width: 1rem;
+    height: 1rem;
+    background-color: #0f0071;
+    display: block;
+    border-radius: 50%;
+    margin: auto;
+    animation: move-wheel 1s linear infinite;
+  }
+  
+  .arrow span {
+    display: block;
+    width: 1rem;
+    height: 1rem;
+    border: 2px solid transparent;
+    border-right: 2px solid #0f0071;
+    border-right-color: #0f0071;
+    border-bottom-color: #0f0071;
+    transform: rotate(45deg);
+    animation: arrow-down 1s alternate infinite;
+  }
+  
+  @keyframes move-wheel {
+    0% {
+        opacity: 0;
+        transform: translateY(-1rem);
     }
-
-    .main_center {
-        padding: 0px;
-        margin: 0px;
-        margin-bottom: 60px;
-        border: 3px solid red;
-        height: 706px;
-        border-radius: 30px;
-        background-color:#fcd121;
-        margin-top: 10px;
+  
+    100% {
+        opacity: 1;
+        transform: translateY(1rem);
     }
-
-    li {
-        list-style: none;
-        margin: auto;
-        float: right;
-        text-align: center;
-        margin-right: 27px;
-        margin-left: 27px;
-        font-size: 20px;
+  }
+  
+  @keyframes arrow-down {
+    0% {
+        opacity: 0;
+        transform: translateY(-1rem);
     }
-
-    a:link {
-        color :#2E2E2E;
-        text-decoration: none;
+  
+    25% {
+        opacity: .25;
     }
-
-    a:visited {
-        color :#2E2E2E;
-        text-decoration: none;
+  
+    50% {
+        opacity: .5;
     }
-
-    a:hover {
-        color :#848484;
-        text-decoration: none;
+  
+    75% {
+        opacity: .75;
     }
-
-    a:active {
-        color :#848484;
-        text-decoration: none;
+  
+    100% {
+        opacity: 1;
     }
-
-    .study_img{
-        padding: 0px;
-        margin: 0px;
-        margin-bottom: 60px;
-        border: 3px solid blue;
-        height: 706px;
-        border-radius: 30px;
-    }
-
-    .timer_img{
-        padding: 0px;
-        margin: 0px;
-        margin-bottom: 60px;
-        border: 3px solid red;
-        height: 706px;
-        border-radius: 30px;
-    }
-
-    h1,p {
-      margin: 0;
-    }
-
-    body {
-        padding-top: 83px;
-        margin-top: 133px;
-        margin: 0px;
-        background: #ffffff;
-    }
-
-    body,html {
-        height: 100%;
-    }
-
+  }
+  
+  #container2 {
+    border: 1px solid red;
+    width: 100%;
+    height: 1000px;
+  }
+  
+  /* 화면 너비 0 ~ 1200px */
+  @media (max-width: 1220px) {
     * {
         box-sizing: border-box;
+        margin: 0 auto;
+        margin-bottom: 0px;
+        max-width: 1200px;
     }
-    footer{
-        height: 100px;
-        background: #2E2E2E;
-        }
-    /* 화면 너비 0 ~ 1200px */
-    @media (max-width: 1220px){
+  
+    li {
+        font-size: 14px;
     }
-    /* 화면 너비 0 ~ 768px */
-    @media (max-width: 768px){
+  
+    .scroll-down {
+        position: absolute;
+        bottom: 5rem;
+        transform: translateX(-10%);
+        transform: translateY(-900%);
+        flex-direction: column;
+        align-items: center;
     }
-    /* 화면 너비 0 ~ 480px */
-    @media (max-width: 480px){
-    header {height: 133px;}
+  
+    .mouse {
+        width: 2.5rem;
+        height: 5rem;
+        border: 2px solid #0f0071;
+        border-radius: 2rem;
+        margin-bottom: .5rem;
+        display: flex;
     }
+  
+    .mouse span {
+        width: 1rem;
+        height: 1rem;
+        background-color: #0f0071;
+        display: block;
+        border-radius: 50%;
+        margin: auto;
+        animation: move-wheel 1s linear infinite;
+    }
+  
+    .arrow span {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        border: 2px solid transparent;
+        border-right: 2px solid #0f0071;
+        border-right-color: #0f0071;
+        border-bottom-color: #0f0071;
+        transform: rotate(45deg);
+        animation: arrow-down 1s alternate infinite;
+    }
+  }
+  
+  /* 화면 너비 0 ~ 768px */
+  @media (max-width: 768px) {
+    * {
+        box-sizing: border-box;
+        margin: 0 auto;
+        margin-bottom: 0px;
+        max-width: 750px;
+    }
+  
+    li {
+        font-size: 14px;
+    }
+  
+    .scroll-down {
+        position: absolute;
+        bottom: 5rem;
+        transform: translateX(-10%);
+        transform: translateY(-1500%);
+        flex-direction: column;
+        align-items: center;
+    }
+  
+    .mouse {
+        width: 2.5rem;
+        height: 5rem;
+        border: 2px solid #0f0071;
+        border-radius: 2rem;
+        margin-bottom: .5rem;
+        display: flex;
+    }
+  
+    .mouse span {
+        width: 1rem;
+        height: 1rem;
+        background-color: #0f0071;
+        display: block;
+        border-radius: 50%;
+        margin: auto;
+        animation: move-wheel 1s linear infinite;
+    }
+  
+    .arrow span {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        border: 2px solid transparent;
+        border-right: 2px solid #0f0071;
+        border-right-color: #0f0071;
+        border-bottom-color: #0f0071;
+        transform: rotate(45deg);
+        animation: arrow-down 1s alternate infinite;
+    }
+  }
+  
+  /* 화면 너비 0 ~ 480px */
+  @media (max-width: 480px) {
+    * {
+        box-sizing: border-box;
+        margin: 0 auto;
+        margin-bottom: 0px;
+        max-width: 40px;
+    }
+  
+    header {
+        height: 133px;
+    }
+  
+    li {
+        font-size: 14px;
+    }
+  
+    .scroll-down {
+        position: absolute;
+        bottom: 5rem;
+        transform: translateX(-10%);
+        transform: translateY(-2000%);
+        flex-direction: column;
+        align-items: center;
+    }
+  
+    .mouse {
+        width: 2.5rem;
+        height: 5rem;
+        border: 2px solid #0f0071;
+        border-radius: 2rem;
+        margin-bottom: .5rem;
+        display: flex;
+    }
+  
+    .mouse span {
+        width: 1rem;
+        height: 1rem;
+        background-color: #0f0071;
+        display: block;
+        border-radius: 50%;
+        margin: auto;
+        animation: move-wheel 1s linear infinite;
+    }
+  
+    .arrow span {
+        display: block;
+        width: 1rem;
+        height: 1rem;
+        border: 2px solid transparent;
+        border-right: 2px solid #0f0071;
+        border-right-color: #0f0071;
+        border-bottom-color: #0f0071;
+        transform: rotate(45deg);
+        animation: arrow-down 1s alternate infinite;
+    }
+  }
