--- a/MakingVocabulary.css
+++ b/MakingVocabulary.css
@@ -1,59 +1,81 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
 }
 
-/* header */
-.header {
+.container {
+    display: block;
+}
+nav {
+    max-width: 1200px;
+    box-sizing: border-box;
+}
+
+header {
     position: fixed;
+    box-shadow: 2px 2px 50px -30px gray;
     top: 0;
     left: 0;
     right: 0;
-    height: 90px;
+    height: 80px;
     padding: 1rem;
+    color: white;
     background: white;
+    font-weight: bold;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 10;
-    box-shadow: 2px 2px 50px -30px gray;
+    box-sizing: border-box;
 }
-.header img {
-    width: 140px;
-    float: left;
-    margin-top: 20px;
-    margin-left: 50px;
+#logo img {
+    margin: 0 auto;
+    margin-left: 190px;
+    height: 44px;
+    width: 159px;
+    box-sizing: border-box;
 }
-.nav {
-    width: 100%;
+
+header ul {
+    margin-right: 100px;
+    box-sizing: border-box;
 }
-.nav li {
-    height: 58px;
+
+.highlight {
     list-style: none;
+    margin: auto;
     float: right;
     text-align: center;
-    margin: 44px 27px 0 27px;
-    font-size: 25px;
+    margin-right: 27px;
+    margin-left: 27px;
+    font-size: 20px;
+    box-sizing: border-box;
 }
-a {
+
+a:link {
     color: #2E2E2E;
     text-decoration: none;
 }
-.nav li a:hover {
-    color: #848484;
+
+a:visited {
+    color: #2E2E2E;
     text-decoration: none;
 }
-.header_line {
-    margin-top: -10px;
-    border: 0px;
-    background: gray;
+
+header li:hover {
+    color: #000000;
+    text-decoration: none;
+    box-shadow: inset 0 -10px 0  #fcd121; 
+}
+
+header li:active {
+    color: #000000;
+    text-decoration: none;
 }
 
 /* main */
 .main{
     height: 100%;
-    min-height: 780px;
     width: 100%;
-    margin-top: 130px;
+    margin-top: 80px;
 }
 
 /* main-left */
@@ -62,7 +84,7 @@ a {
     float: left;
     width: 450px;
     height: 100%;
-    min-height: 780px;
+    min-height: 840px;
     text-indent: 10px;
     border-right: 1.5px solid lightgray;
 }
@@ -117,15 +139,18 @@ a {
     list-style: none;
     float: left;
     bottom: 0;
+    padding: 0;
     margin-bottom: 20px;
     padding-top: 20px;
     display: flex;
 }
 .list_edit_ul li {
-    border: 1px solid black;
     width: 40px;
     height: 33px;
     margin: 0 auto;
+}
+.list_edit_ul img {
+    width: 30px;
 }
 
 /* main-right */
@@ -183,19 +208,266 @@ a {
     height: auto;
 }
 /* footer */
-.footer {
+footer {
     width: 100%;
-    height: 100px;
     background-color: #363636;
     align-items: center;
+    clear: both;
+    position: relative;
+    height: 100px;
+    margin-top: -200px;
 }
-.footer img {
+footer img {
     margin-top: 35px;
     margin-left: 50px;
 }
-.footer p {
+footer p {
     color: white;
     float: right;
     margin-top: 35px;
     margin-right: 50px;
+}
+
+
+
+@media(min-width: 2000px){
+* {
+    margin: 0 auto;
+}
+.container {
+    display: block;
+}
+nav {
+    max-width: 1200px;
+    box-sizing: border-box;
+}
+
+header {
+    position: fixed;
+    box-shadow: 2px 2px 50px -30px gray;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 80px;
+    padding: 1rem;
+    color: white;
+    background: white;
+    font-weight: bold;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-sizing: border-box;
+}
+#logo img {
+    margin: 0 auto;
+    margin-left: 190px;
+    height: 44px;
+    width: 159px;
+    box-sizing: border-box;
+}
+
+header ul {
+    margin-right: 100px;
+    box-sizing: border-box;
+}
+a:link {
+    color: #2E2E2E;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #2E2E2E;
+    text-decoration: none;
+}
+
+header li:hover {
+    color: #000000;
+    text-decoration: none;
+    box-shadow: inset 0 -10px 0  #fcd121; 
+}
+
+header li:active {
+    color: #000000;
+    text-decoration: none;
+}
+
+/* main */
+.main{
+    height: 1335px;
+    width: 100%;
+    margin-top: 80px;
+}
+
+/* main-left */
+.list {
+    margin-left: 530px;
+    position: relative;
+    float: left;
+    width: 450px;
+    text-indent: 10px;
+    border-right: 1.5px solid lightgray;
+}
+.title img {
+    position: absolute;
+    width: 37px;
+    height: 37px;
+    margin-left: -60px;
+}
+.listul {
+    width: 100%;
+    margin:0;
+    padding:0;
+    list-style:none;
+    height: 29px;
+    margin-left: 116px;
+    font-size: 40px;
+    line-height: 40px;
+}
+.group {
+    float: left;
+    list-style: none;
+}
+.group .title {
+    height: 35px;
+    line-height: 45px;
+    margin-top: 60px;
+    margin-bottom: 17px;
+    cursor:pointer;
+    font-weight: bold;
+}
+.sub li {
+    width: 300px;
+    font-size: 30px;
+    list-style: none;
+    margin-left: 20px;
+    margin-bottom: 15px;
+    height:35px;
+    line-height:45px;
+    cursor:pointer;
+}
+.sub div {
+    width: 20px;
+    height: 20px;
+    border-left: 2px solid gray;
+    border-bottom: 2px solid gray;
+}
+.list_edit_ul {
+    position: absolute;
+    width: 100%;
+    border-top: 3px solid gray;
+    list-style: none;
+    float: left;
+    bottom: 0;
+    padding: 0;
+    margin-bottom: 20px;
+    padding-top: 20px;
+    display: flex;
+}
+.list_edit_ul li {
+    width: 40px;
+    height: 100%;
+    margin: 0 auto;
+}
+.list_edit_ul img {
+    width: 30px;
+}
+
+/* main-right */
+.unit_list {
+    width: 820px;
+    float: left;
+    display: inline-block;
+    margin-left: 80px;
+}
+.unit_list_ul {
+    margin-top: 66px;
+    width: 930px;
+    list-style: none;
+}
+.unit_list_sub {
+    height: 100px;
+    margin-bottom: 50px;
+    padding: 35px 0 22px 23px;
+    border-radius: 13px;
+    background: #fcd121;
+    color: white;
+    font-size: 40px;
+    line-height: 25px;
+    position: relative;
+}
+.unit_list_ul_last {
+    padding-top: 14px;
+    padding-bottom: 34px;
+    text-align: center;
+    border-radius: 13px;
+    background: #FFFF;
+    border: 2px solid #C4C4C4;
+    color: #C4C4C4;
+    font-size: 25px;
+    line-height: 25px;
+    cursor: pointer;
+}
+.unit_list_sub_ul {
+    position: absolute;
+    width: 120px;
+    height: 20px;
+    display: inline-block;
+    right: 0;
+    bottom: 20px;
+    margin-right: 4px;
+}
+.unit_list_sub_ul li {
+    display: inline;
+    margin-right: 15px;
+    float: left;
+    color: white;
+}
+.unit_list_sub_ul li img {
+    width: 20px;
+    height: auto;
+}
+/* footer */
+footer {
+    width: 100%;
+    background-color: #363636;
+    align-items: center;
+    clear: both;
+    position: relative;
+    height: 100px;
+    margin-top: -200px;
+}
+footer img {
+    margin-top: 35px;
+    margin-left: 50px;
+}
+footer p {
+    color: white;
+    float: right;
+    margin-top: 35px;
+    margin-right: 50px;
+    }
+}
+
+@media (max-width: 770px){
+    header {
+        height: 135px;
+    }
+    .main {
+        margin-top: 135px;
+    }
+    * {
+        max-width: 750px;
+    }
+}
+@media (max-width: 480px) {
+    header {
+        font-size: 14px;
+        height: 135px;
+    }
+    #highlight {
+        font-size: 14px;
+    }
+    #logo img {
+        margin-left: 30px;
+    }
 }
