--- a/Memorize.css
+++ b/Memorize.css
@@ -1,59 +1,82 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0 auto;
 }
 
-/* header */
-.header {
+.container {
+    display: block;
+}
+nav {
+    max-width: 1200px;
+    box-sizing: border-box;
+}
+
+header {
     position: fixed;
+    box-shadow: 2px 2px 50px -30px gray;
     top: 0;
     left: 0;
     right: 0;
-    height: 90px;
+    height: 80px;
     padding: 1rem;
+    color: white;
     background: white;
+    font-weight: bold;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 10;
-    box-shadow: 2px 2px 50px -30px gray;
+    box-sizing: border-box;
 }
-.header img {
-    width: 140px;
-    float: left;
-    margin-top: 20px;
-    margin-left: 50px;
+#logo img {
+    margin: 0 auto;
+    margin-left: 190px;
+    height: 44px;
+    width: 159px;
+    box-sizing: border-box;
 }
-.nav {
-    width: 100%;
+
+header ul {
+    margin-right: 100px;
+    box-sizing: border-box;
 }
-.nav li {
-    height: 58px;
+
+.highlight {
     list-style: none;
+    margin: auto;
     float: right;
     text-align: center;
-    margin: 44px 27px 0 27px;
-    font-size: 25px;
+    margin-right: 27px;
+    margin-left: 27px;
+    font-size: 20px;
+    box-sizing: border-box;
 }
-a {
+
+a:link {
     color: #2E2E2E;
     text-decoration: none;
 }
-.nav li a:hover {
-    color: #848484;
+
+a:visited {
+    color: #2E2E2E;
     text-decoration: none;
 }
-.header_line {
-    margin-top: -10px;
-    border: 0px;
-    background: gray;
+
+header li:hover {
+    color: #000000;
+    text-decoration: none;
+    box-shadow: inset 0 -10px 0  #fcd121; 
+}
+
+header li:active {
+    color: #000000;
+    text-decoration: none;
 }
 
 /* main */
 .main{
     width: 100%;
     height: 100%;
-    min-height: 780px;
-    margin-top: 130px;
+    min-height: 745px;
+    margin-top: 80px;
 }
 /* title */
 .title {
@@ -152,4 +175,28 @@ footer p {
     float: right;
     margin-top: 35px;
     margin-right: 50px;
+}
+
+
+@media (max-width: 770px){
+    header {
+        height: 135px;
+    }
+    .main {
+        margin-top: 135px;
+    }
+    * {
+        max-width: 750px;
+    }
+}
+@media (max-width: 480px) {
+    header {
+        height: 135px;
+    }
+    .nav a {
+        font-size: 14px;
+    }
+    #logo img {
+        margin-left: 30px;
+    }
 }
