--- a/MyPage.css
+++ b/MyPage.css
@@ -1,10 +1,22 @@
+* {
+    margin: 0 auto;
+}
+
+.container {
+    display: block;
+}
+nav {
+    max-width: 1200px;
+    box-sizing: border-box;
+}
+
 header {
     position: fixed;
     box-shadow: 2px 2px 50px -30px gray;
     top: 0;
     left: 0;
     right: 0;
-    height: 100px;
+    height: 80px;
     padding: 1rem;
     color: white;
     background: white;
@@ -12,17 +24,22 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 100;
+    box-sizing: border-box;
 }
-header img {
+#logo img {
     margin: 0 auto;
     margin-left: 190px;
-    width: 140px;
+    height: 44px;
+    width: 159px;
+    box-sizing: border-box;
 }
-ul{
+
+header ul {
     margin-right: 100px;
+    box-sizing: border-box;
 }
-li {
+
+.highlight {
     list-style: none;
     margin: auto;
     float: right;
@@ -30,6 +47,7 @@ li {
     margin-right: 27px;
     margin-left: 27px;
     font-size: 20px;
+    box-sizing: border-box;
 }
 
 a:link {
@@ -42,13 +60,14 @@ a:visited {
     text-decoration: none;
 }
 
-a:hover {
-    color: #848484;
+header li:hover {
+    color: #000000;
     text-decoration: none;
+    box-shadow: inset 0 -10px 0  #fcd121; 
 }
 
-a:active {
-    color: #848484;
+header li:active {
+    color: #000000;
     text-decoration: none;
 }
 #main{
@@ -147,12 +166,6 @@ footer p {
     margin-top: 35px;
     margin-right: 50px;
 }
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
 body {
     overflow-x: hidden;
 }
@@ -186,19 +199,19 @@ body {
     }
 }
 /* 화면 너비 0 ~ 768px */
-@media (max-width: 768px){
+@media (max-width: 770px){
     .main_left {
         margin-left: 0px;
     }
     #main_middle {
         display: none;
     }
-}
-/* 화면 너비 0 ~ 480px */
-@media (max-width: 600px){
     header {
         height: 133px;
     }
+}
+/* 화면 너비 0 ~ 480px */
+@media (max-width: 600px){
     .profile {
         width: 250px;
         height: 250px;
