--- a/Making.css
+++ b/Making.css
@@ -1,33 +1,33 @@
 body {
-    margin : 0;
+    margin: 0;
 }
 
 #header-warpper {
-    width: 100%;
+    max-width:auto;
     height: 15vh;
-    background-color:#fcd121;
+    background-color: #fcd121;
     display: flex;
-    justify-content:space-around;
-    align-items:flex-end;
-    padding-bottom:20px;
+    justify-content: space-around;
+    align-items: flex-end;
+    padding-bottom: 20px;
     font-size: 20px;
-   
+
 }
 
 a {
-    color : rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     text-decoration: none;
 }
 
 a:hover {
     text-decoration: underline;
-    cursor:pointer;
-    color:rgb(255, 255, 255);
+    cursor: pointer;
+    color: rgb(255, 255, 255);
 }
 
 a:active {
     text-decoration: none;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
 }
 
 ul {
@@ -35,22 +35,24 @@ ul {
 }
 
 #title {
-    font-size:30px;
+    font-size: 30px;
     text-align: left;
     box-sizing: border-box;
-    padding-bottom : 5px;
-    padding-left:5px;
+    padding-bottom: 5px;
+    padding-left: 5px;
+    color: rgb(255, 255, 255);
+    /* 입력 후에도 하얀 글씨 유지 */
     margin: 5px 0;
     background-color: #fcd121;
-    color:rgb(255, 255, 255);
-    border : none; 
-    border-bottom : solid 1px rgb(255, 255, 255);
+    border: none;
+    border-bottom: solid 1px rgb(255, 255, 255);
     outline-style: none;
+
 }
 
-
-input::-webkit-input-placeholder {
-    color:rgb(255, 255, 255);
+/* 화면에 보이는 제목 입력 칸의 글씨색 변경 */
+input::placeholder {
+    color: rgb(255, 255, 255);
 }
 
 #main_container {
@@ -60,149 +62,160 @@ input::-webkit-input-placeholder {
 }
 
 .voca {
-    margin-top : 50px;
+    margin-top: 50px;
 }
 
-
-@media (min-width:1024px){
+/* 화면 너비 0 ~ 2560px */
+@media (max-width:2560px) {
     .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right : 350px;
+        margin-left: 40px;
+        margin-right: 490px;
         margin-bottom: 5px;
     }
-    
+
     .voca_making input:nth-child(1) {
-        width: 350px;
-    }
-    
-    .voca_making input:nth-child(2) {
         width: 500px;
+    }
+
+    .voca_making input:nth-child(2) {
+        width: 700px;
     }
 
     .making-test {
         position: relative;
-        left : 850px;
-        bottom : 40px;
-        color:#8f8f8f;
+        left: 1170px;
+        bottom: 45px;
+        color: #8f8f8f;
     }
-} 
+}
 
-@media (max-width:1023px) and (min-width:768px){
+/* 화면 너비 0 ~ 1200px */
+@media (max-width:1220px) {
     .text_field li:nth-child(1) {
         margin-left: 45px;
-        margin-right :250px;
+        margin-right: 380px;
         margin-bottom: 5px;
+    }
+
+    .voca_making input:nth-child(1) {
+        width: 400px;
+    }
+
+    .voca_making input:nth-child(2) {
+        width: 550px;
+    }
+
+    .making-test {
+        position: relative;
+        left: 920px;
+        bottom: 45px;
+        color: #8f8f8f;
+    }
+}
+
+/* 화면 너비 0 ~ 768px */
+@media (max-width:768px) {
+    .text_field li:nth-child(1) {
+        margin-left: 40px;
+        margin-right: 240px;
+        margin-bottom: 5px;
+    }
+
+    .voca_making {
+        margin-left:0px;
+        margin-right:20px;
     }
 
     .voca_making input:nth-child(1) {
         width: 250px;
     }
-    
+
     .voca_making input:nth-child(2) {
-        width: 350px;
+        width: 340px;
     }
 
     .making-test {
         position: relative;
-        left : 600px;
-        bottom : 40px;
-        color:#8f8f8f;
+        left: 560px;
+        bottom: 45px;
+        color: #8f8f8f;
     }
 }
 
-@media (max-width : 767px) and (min-width:480px){
+/* 화면 너비 0 ~ 480px */
+@media (max-width : 480px) {
     .text_field li:nth-child(1) {
         margin-left: 45px;
-        margin-right : 150px;
+        margin-right: 130px;
     }
-    
+
     .voca_making input:nth-child(1) {
         width: 150px;
     }
-    
+
     .voca_making input:nth-child(2) {
         width: 200px;
     }
 
     .making-test {
         position: relative;
-        left : 400px;
-        bottom : 40px;
-        color:#8f8f8f;
+        left:320px;
+        bottom: 45px;
+        color: #8f8f8f;
     }
-} 
+}
 
-@media (max-width:479px){
-    .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right : 150px;
-    }
-
-    .voca_making input:nth-child(1) {
-        width: 150px;
-    }
-    
-    .voca_making input:nth-child(2) {
-        width: 200px;
-    }
-
-    .making-test {
-        position: relative;
-        left : 850px;
-        bottom : 30px;
-        color:#8f8f8f;
-    }
-}  
 
 .text_field {
     display: flex;
-    font-weight:bold;
-    font-size:20px;
+    font-weight: bold;
+    font-size: 20px;
     align-items: flex-end;
-    margin-top:0px;
-    margin-bottom:5px;
+    margin-top: 0px;
+    margin-bottom: 5px;
 }
 
 .voca_making {
     font-weight: normal;
-    color:#8f8f8f;
+    color: #8f8f8f;
     box-sizing: border-box;
 }
 
 .voca_making input {
-    font-size:20px;
+    font-size: 20px;
     margin-left: 5px;
-    margin-right : 5px;
-    margin-bottom : 15px;
+    margin-right: 5px;
+    margin-bottom: 15px;
     box-sizing: border-box;
-    padding : 5px 0 5px 0;
+    padding: 5px 0 5px 0;
 }
 
 .voca_making li {
-    margin-bottom : 15px;
+    margin-bottom: 15px;
 }
 
 .voca_making li input:nth-child(1) {
-    margin-right : 20px;
+    margin-right: 20px;
 }
 
 .btn {
     display: flex;
-    align-items: flex-start;
     justify-content: center;
 }
 
 #save_btn {
+    position:relative;
+    bottom : 30px;
     background-color: #fcd121;
-    color:rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     text-align: center;
     width: 140px;
     border-style: none;
-    outline-style:none ;
+    outline-style: none;
     border-radius: 10px;
     font-size: 18px;
     height: 40px;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .making-test {
@@ -213,21 +226,23 @@ input::-webkit-input-placeholder {
 }
 
 .add {
-    border : 1px solid #8f8f8f;
+    border: 1px solid #8f8f8f;
     border-radius: 100%;
-    width:20px;
-    height:20px;
+    width: 30px;
+    height: 30px;
     margin-right: 5px;
+    outline-style: none;
     background-color: rgb(255, 255, 255);
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .minus {
-    border : 1px solid #8f8f8f;
+    border: 1px solid #8f8f8f;
     border-radius: 100%;
-    width:20px;
-    height:20px;
+    width: 30px;
+    height: 30px;
     margin-left: 5px;
+    outline-style: none;
     background-color: rgb(255, 255, 255);
-    cursor:pointer;
+    cursor: pointer;
 }
