--- a/Making.css
+++ b/Making.css
@@ -1,17 +1,18 @@
-body {
-    margin: 0;
+* {
+    box-sizing: border-box;
+    margin: 0 auto;
 }
 
-#header-warpper {
-    max-width:auto;
-    height: 15vh;
+/* header */
+#header_container {
+    width: 100%;
+    height: 20vh;
     background-color: #fcd121;
     display: flex;
     justify-content: space-around;
     align-items: flex-end;
-    padding-bottom: 20px;
-    font-size: 20px;
-
+    font-size: 1.5rem;
+    padding-bottom : 20px;
 }
 
 a {
@@ -30,18 +31,13 @@ a:active {
     color: rgb(255, 255, 255);
 }
 
-ul {
-    list-style: none;
-}
-
 #title {
-    font-size: 30px;
+    font-size: 2rem;
     text-align: left;
     box-sizing: border-box;
     padding-bottom: 5px;
     padding-left: 5px;
     color: rgb(255, 255, 255);
-    /* 입력 후에도 하얀 글씨 유지 */
     margin: 5px 0;
     background-color: #fcd121;
     border: none;
@@ -50,152 +46,262 @@ ul {
 
 }
 
-/* 화면에 보이는 제목 입력 칸의 글씨색 변경 */
-input::placeholder {
+#title::placeholder {
     color: rgb(255, 255, 255);
 }
 
-#main_container {
-    display: grid;
-    justify-content: center;
-    align-items: center;
+/* section */
+.main_container {
+    text-align: center;
 }
 
-.voca {
-    margin-top: 50px;
+.voca_container {
+    display: inline-flex;
+}
+
+ul {
+    list-style: none;
 }
 
 /* 화면 너비 0 ~ 2560px */
 @media (max-width:2560px) {
-    .text_field li:nth-child(1) {
-        margin-left: 40px;
-        margin-right: 490px;
-        margin-bottom: 5px;
+    .main {
+        display: flex;
+        padding-top:100px;
     }
 
-    .voca_making input:nth-child(1) {
-        width: 500px;
+    p {
+        font-size : 30px;
     }
 
-    .voca_making input:nth-child(2) {
-        width: 700px;
+    span {
+        font-size : 20px;
     }
 
-    .making-test {
-        position: relative;
-        left: 1170px;
-        bottom: 45px;
-        color: #8f8f8f;
+    .voca_container input {
+        font-size:25px;
+        margin-bottom : 30px;
+        height: 2.5em;
+    }
+
+    .voca_field input {
+        width : 600px;
+    }
+
+    .mean_field input {
+        width : 39em;
+    }
+
+    #save_btn {
+        bottom : 30px;
+        width: 250px;
+        height: 60px;
+        font-size: 25px;
+    }
+
+    .addMinus{
+        bottom: 50px;
+        left: 780px;
+    }
+
+    .add {
+        font-size:30px;
+        width:45px;
+	    height:45px;
+        line-height:45px;
+    }
+
+    .minus {
+        font-size:30px;
+	    width:45px;
+	    height:45px;
+        line-height:45px;
+    }
+
+}
+
+/* 화면 너비 0 ~ 2000px */
+@media (max-width:2000px) {
+    .main {
+        display: flex;
+        padding-top:100px;
+    }
+
+    p {
+        font-size : 30px;
+    }
+
+    span {
+        font-size : 20px;
+    }
+
+    .voca_container input {
+        font-size:25px;
+        margin-bottom : 30px;
+        height: 2.5em;
+    }
+
+    .voca_field input {
+        width : 500px;
+    }
+
+    .mean_field input {
+        width : 35em;
+    }
+
+    #save_btn {
+        bottom : 30px;
+        width: 250px;
+        height: 60px;
+        font-size: 25px;
+    }
+
+    .addMinus{
+        bottom: 50px;
+        left: 680px;
+    }
+
+    .add {
+        font-size:30px;
+        width:45px;
+	    height:45px;
+        line-height:45px;
+    }
+
+    .minus {
+        font-size:30px;
+	    width:45px;
+	    height:45px;
+        line-height:45px;
     }
 }
 
 /* 화면 너비 0 ~ 1200px */
 @media (max-width:1220px) {
-    .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right: 380px;
-        margin-bottom: 5px;
+    .main {
+        display: flex;
+        padding-top:100px;
     }
 
-    .voca_making input:nth-child(1) {
-        width: 400px;
+    p {
+        font-size : 30px;
     }
 
-    .voca_making input:nth-child(2) {
-        width: 550px;
+    span {
+        font-size : 20px;
     }
 
-    .making-test {
-        position: relative;
-        left: 920px;
-        bottom: 45px;
-        color: #8f8f8f;
+    .voca_container input {
+        font-size:25px;
+        margin-bottom : 30px;
+        height: 2.5em;
+    }
+
+    .voca_field input {
+        width : 300px;
+    }
+
+    .mean_field input {
+        width : 27em;
+    }
+
+    #save_btn {
+        bottom : 30px;
+        width: 250px;
+        height: 60px;
+        font-size: 25px;
+    }
+
+    .addMinus{
+        bottom: 50px;
+        left: 480px;
+    }
+
+    .add {
+        font-size:30px;
+        width:45px;
+	    height:45px;
+        line-height:45px;
+    }
+
+    .minus {
+        font-size:30px;
+	    width:45px;
+	    height:45px;
+        line-height:45px;
     }
 }
 
 /* 화면 너비 0 ~ 768px */
-@media (max-width:768px) {
-    .text_field li:nth-child(1) {
-        margin-left: 40px;
-        margin-right: 240px;
-        margin-bottom: 5px;
+@media (max-width : 768px) { /* 수정 필요 미디어쿼리가 이상함 */
+    .main {
+        display: flex;
+        padding-top:100px;
     }
 
-    .voca_making {
-        margin-left:0px;
-        margin-right:20px;
+    p {
+        font-size : 20px;
     }
 
-    .voca_making input:nth-child(1) {
-        width: 250px;
+    span {
+        font-size : 10px;
     }
 
-    .voca_making input:nth-child(2) {
-        width: 340px;
+    .voca_container input {
+        font-size:20px;
+        margin-bottom : 30px;
+        height: 1em;
     }
 
-    .making-test {
-        position: relative;
-        left: 560px;
-        bottom: 45px;
-        color: #8f8f8f;
-    }
-}
-
-/* 화면 너비 0 ~ 480px */
-@media (max-width : 480px) {
-    .text_field li:nth-child(1) {
-        margin-left: 45px;
-        margin-right: 130px;
+    .voca_field input {
+        width : 150px;
     }
 
-    .voca_making input:nth-child(1) {
+    .mean_field input {
+        width : 200px;
+    }
+
+    #save_btn {
+        bottom : 30px;
         width: 150px;
+        height: 50px;
+        font-size: 20px;
     }
 
-    .voca_making input:nth-child(2) {
-        width: 200px;
+    .addMinus{
+        bottom: 40px;
+        left: 280px;
     }
 
-    .making-test {
-        position: relative;
-        left:320px;
-        bottom: 45px;
-        color: #8f8f8f;
+    .add {
+        font-size:20px;
+        width:25px;
+	    height:25px;
+        line-height:25px;
+    }
+
+    .minus {
+        font-size:20px;
+	    width:25px;
+	    height:25px;
+        line-height:25px;
     }
 }
 
-
-.text_field {
-    display: flex;
-    font-weight: bold;
-    font-size: 20px;
-    align-items: flex-end;
-    margin-top: 0px;
-    margin-bottom: 5px;
+p {
+    margin-bottom : 15px;
 }
 
-.voca_making {
-    font-weight: normal;
-    color: #8f8f8f;
-    box-sizing: border-box;
+span {
+    padding-right : 5px;
 }
 
-.voca_making input {
-    font-size: 20px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 15px;
-    box-sizing: border-box;
-    padding: 5px 0 5px 0;
+.voca_field p {
+    text-align: left;
 }
 
-.voca_making li {
-    margin-bottom: 15px;
-}
-
-.voca_making li input:nth-child(1) {
-    margin-right: 20px;
+.mean_field p {
+    text-align: left;
 }
 
 .btn {
@@ -204,45 +310,47 @@ input::placeholder {
 }
 
 #save_btn {
+    margin-top:30px;
     position:relative;
-    bottom : 30px;
     background-color: #fcd121;
     color: rgb(255, 255, 255);
     text-align: center;
-    width: 140px;
     border-style: none;
     outline-style: none;
     border-radius: 10px;
-    font-size: 18px;
-    height: 40px;
     cursor: pointer;
 }
 
-.making-test {
-    font-size: 20px;
-    display: flex;
-    text-align: center;
-    line-height: 20px;
+.addMinus {
+    position: relative;
+    display: inline-flex;
 }
 
 .add {
+    display:inline-block;
+    text-decoration:none;
+    color:#8f8f8f;
+    text-align: center;
+    margin-right:5px;
+    border-radius:100px;
     border: 1px solid #8f8f8f;
-    border-radius: 100%;
-    width: 30px;
-    height: 30px;
-    margin-right: 5px;
     outline-style: none;
+    vertical-align:middle;
     background-color: rgb(255, 255, 255);
     cursor: pointer;
 }
 
 .minus {
+    display:inline-block;
+    text-decoration:none;
+    color:#8f8f8f;
+    text-align: center;
+    margin-left:5px;
+    border-radius:100px;
     border: 1px solid #8f8f8f;
-    border-radius: 100%;
-    width: 30px;
-    height: 30px;
-    margin-left: 5px;
     outline-style: none;
+    vertical-align:middle;
     background-color: rgb(255, 255, 255);
     cursor: pointer;
 }
+
